import crypto from "crypto";
/**
 * NVIDIA go-llama Integration Service
 * High-performance GPU-accelerated language model inference
 */

import { writable, derived } from "svelte/store";
import { productionServiceClient, ServiceTier } from "$lib/api/production-client";

export interface NvidiaLlamaConfig {
  // GPU Configuration
  gpu_devices: number[];
  gpu_memory_per_device: number; // GB
  tensor_parallel_size: number;
  pipeline_parallel_size: number;
  
  // Model Configuration
  model_path: string;
  model_type: 'llama2' | 'llama3' | 'codellama' | 'legal-llama';
  max_tokens: number;
  context_length: number;
  
  // Performance Settings
  batch_size: number;
  beam_size: number;
  temperature: number;
  top_p: number;
  top_k: number;
  
  // Optimization
  use_fp16: boolean;
  use_kv_cache: boolean;
  enable_streaming: boolean;
  quantization: 'none' | 'int8' | 'int4' | 'fp8';
  
  // Load Balancing
  worker_count: number;
  load_balancing: 'round_robin' | 'least_busy' | 'gpu_utilization';
}

export interface NvidiaLlamaStats {
  // Performance Metrics
  avg_tokens_per_second: number;
  avg_latency_ms: number;
  throughput_requests_per_second: number;
  
  // GPU Utilization
  gpu_utilization: number[]; // Per GPU
  gpu_memory_used: number[]; // Per GPU (GB)
  gpu_temperature: number[]; // Per GPU (Celsius)
  
  // Model Stats
  total_tokens_generated: number;
  total_requests_processed: number;
  cache_hit_ratio: number;
  
  // System Health
  uptime_seconds: number;
  error_rate: number;
  queue_length: number;
}

export interface LlamaRequest {
  prompt: string;
  max_tokens?: number;
  temperature?: number;
  top_p?: number;
  top_k?: number;
  stop_sequences?: string[];
  stream?: boolean;
  user_id?: string;
  request_id?: string;
  priority?: 'low' | 'normal' | 'high' | 'urgent';
}

export interface LlamaResponse {
  text: string;
  tokens_generated: number;
  finish_reason: 'length' | 'stop' | 'error';
  generation_time_ms: number;
  tokens_per_second: number;
  model_used: string;
  gpu_used: number[];
  request_id: string;
  metadata: {
    prompt_tokens: number;
    completion_tokens: number;
    total_tokens: number;
    cached_tokens: number;
  };
}

const initialConfig: NvidiaLlamaConfig = {
  gpu_devices: [0], // RTX 3060 Ti
  gpu_memory_per_device: 8,
  tensor_parallel_size: 1,
  pipeline_parallel_size: 1,
  model_path: '/models/legal-llama-7b',
  model_type: 'legal-llama',
  max_tokens: 2048,
  context_length: 4096,
  batch_size: 8,
  beam_size: 1,
  temperature: 0.7,
  top_p: 0.9,
  top_k: 40,
  use_fp16: true,
  use_kv_cache: true,
  enable_streaming: true,
  quantization: 'int8',
  worker_count: 2,
  load_balancing: 'gpu_utilization'
};

const initialStats: NvidiaLlamaStats = {
  avg_tokens_per_second: 0,
  avg_latency_ms: 0,
  throughput_requests_per_second: 0,
  gpu_utilization: [0],
  gpu_memory_used: [0],
  gpu_temperature: [0],
  total_tokens_generated: 0,
  total_requests_processed: 0,
  cache_hit_ratio: 0,
  uptime_seconds: 0,
  error_rate: 0,
  queue_length: 0
};

// Core stores
export const nvidiaLlamaConfigStore = writable<NvidiaLlamaConfig>(initialConfig);
export const nvidiaLlamaStatsStore = writable<NvidiaLlamaStats>(initialStats);

// Derived stores
export const isNvidiaLlamaHealthy = derived(
  nvidiaLlamaStatsStore,
  $stats => $stats.error_rate < 0.05 && $stats.gpu_utilization.every(util => util < 95)
);

export const averageGpuUtilization = derived(
  nvidiaLlamaStatsStore,
  $stats => $stats.gpu_utilization.reduce((sum, util) => sum + util, 0) / $stats.gpu_utilization.length
);

export const totalGpuMemoryUsed = derived(
  nvidiaLlamaStatsStore,
  $stats => $stats.gpu_memory_used.reduce((sum, mem) => sum + mem, 0)
);

export class NvidiaLlamaService {
  private statsUpdateInterval: NodeJS.Timeout | null = null;
  private requestQueue: Array<{
    request: LlamaRequest;
    resolve: (response: LlamaResponse) => void;
    reject: (error: Error) => void;
    timestamp: number;
  }> = [];

  constructor() {
    this.startStatsCollection();
  }

  /**
   * Initialize NVIDIA go-llama service
   */
  async initialize(): Promise<void> {
    try {
      const config = await this.getCurrentConfig();
      
      const response = await productionServiceClient.execute('nvidia_llama.initialize', {
        config,
        gpu_devices: config.gpu_devices,
        model_path: config.model_path,
        optimization_level: 'high'
      });

      if (!response.success) {
        throw new Error(`Failed to initialize NVIDIA Llama: ${response.error}`);
      }

      console.log('✅ NVIDIA go-llama service initialized successfully');
      this.updateStats();

    } catch (error) {
      console.error('❌ Failed to initialize NVIDIA Llama:', error);
      throw error;
    }
  }

  /**
   * Generate text using NVIDIA go-llama
   */
  async generateText(request: LlamaRequest): Promise<LlamaResponse> {
    const startTime = Date.now();
    const requestId = request.request_id || crypto.randomUUID();

    try {
      // Add to queue for load balancing
      if (request.priority !== 'urgent') {
        await this.addToQueue(request);
      }

      const response = await productionServiceClient.execute('nvidia_llama.generate', {
        prompt: request.prompt,
        max_tokens: request.max_tokens || 1024,
        temperature: request.temperature || 0.7,
        top_p: request.top_p || 0.9,
        top_k: request.top_k || 40,
        stop_sequences: request.stop_sequences || [],
        stream: request.stream || false,
        request_id: requestId,
        priority: request.priority || 'normal'
      }, {
        timeout: 120000, // 2 minutes for long generations
        forceTier: ServiceTier.HIGH_PERF // Use gRPC for high performance
      });

      const generationTime = Date.now() - startTime;
      const tokensPerSecond = response.tokens_generated / (generationTime / 1000);

      // Update stats
      this.updateRequestStats(generationTime, response.tokens_generated);

      return {
        text: response.text,
        tokens_generated: response.tokens_generated,
        finish_reason: response.finish_reason,
        generation_time_ms: generationTime,
        tokens_per_second: tokensPerSecond,
        model_used: response.model_used || 'legal-llama-7b',
        gpu_used: response.gpu_used || [0],
        request_id: requestId,
        metadata: {
          prompt_tokens: response.prompt_tokens || 0,
          completion_tokens: response.tokens_generated,
          total_tokens: (response.prompt_tokens || 0) + response.tokens_generated,
          cached_tokens: response.cached_tokens || 0
        }
      };

    } catch (error) {
      console.error('NVIDIA Llama generation failed:', error);
      throw new Error(`Generation failed: ${error instanceof Error ? error.message : 'Unknown error'}`);
    }
  }

  /**
   * Generate embeddings using NVIDIA GPU acceleration
   */
  async generateEmbeddings(text: string, model: string = 'nvidia-embed'): Promise<{
    embeddings: number[];
    dimensions: number;
    model: string;
    generation_time_ms: number;
  }> {
    const startTime = Date.now();

    try {
      const response = await productionServiceClient.execute('nvidia_llama.embeddings', {
        text,
        model,
        normalize: true
      });

      return {
        embeddings: response.embeddings,
        dimensions: response.embeddings.length,
        model: response.model_used,
        generation_time_ms: Date.now() - startTime
      };

    } catch (error) {
      console.error('NVIDIA embeddings generation failed:', error);
      throw error;
    }
  }

  /**
   * Batch processing for multiple requests
   */
  async batchGenerate(requests: LlamaRequest[]): Promise<LlamaResponse[]> {
    try {
      const response = await productionServiceClient.execute('nvidia_llama.batch_generate', {
        requests,
        batch_config: {
          max_batch_size: 16,
          timeout_per_request: 60000,
          parallel_processing: true
        }
      });

      return response.results;

    } catch (error) {
      console.error('Batch generation failed:', error);
      throw error;
    }
  }

  /**
   * Fine-tune model for legal domain
   */
  async fineTune(trainingData: {
    prompts: string[];
    completions: string[];
    categories: string[];
  }): Promise<{
    model_id: string;
    training_progress: number;
    estimated_completion: number;
  }> {
    try {
      const response = await productionServiceClient.execute('nvidia_llama.fine_tune', {
        training_data: trainingData,
        fine_tune_config: {
          learning_rate: 2e-5,
          batch_size: 4,
          num_epochs: 3,
          warmup_steps: 100,
          save_steps: 500
        }
      });

      return response;

    } catch (error) {
      console.error('Fine-tuning failed:', error);
      throw error;
    }
  }

  /**
   * Get GPU performance metrics
   */
  async getGpuMetrics(): Promise<{
    gpu_count: number;
    utilization: number[];
    memory_used: number[];
    memory_total: number[];
    temperature: number[];
    power_usage: number[];
  }> {
    try {
      const response = await productionServiceClient.execute('nvidia_llama.gpu_metrics', {});
      return response.metrics;
    } catch (error) {
      console.error('Failed to get GPU metrics:', error);
      return {
        gpu_count: 1,
        utilization: [0],
        memory_used: [0],
        memory_total: [8],
        temperature: [0],
        power_usage: [0]
      };
    }
  }

  /**
   * Update service configuration
   */
  async updateConfig(newConfig: Partial<NvidiaLlamaConfig>): Promise<void> {
    nvidiaLlamaConfigStore.update(config => ({ ...config, ...newConfig }));
    
    try {
      await productionServiceClient.execute('nvidia_llama.update_config', {
        config: newConfig
      });
    } catch (error) {
      console.error('Failed to update NVIDIA Llama config:', error);
      throw error;
    }
  }

  /**
   * Start collecting performance statistics
   */
  private startStatsCollection(): void {
    if (this.statsUpdateInterval) {
      clearInterval(this.statsUpdateInterval);
    }

    this.statsUpdateInterval = setInterval(async () => {
      await this.updateStats();
    }, 5000); // Update every 5 seconds
  }

  /**
   * Update performance statistics
   */
  private async updateStats(): Promise<void> {
    try {
      const [metrics, serviceStats] = await Promise.all([
        this.getGpuMetrics(),
        productionServiceClient.execute('nvidia_llama.stats', {})
      ]);

      nvidiaLlamaStatsStore.set({
        avg_tokens_per_second: serviceStats.avg_tokens_per_second || 0,
        avg_latency_ms: serviceStats.avg_latency_ms || 0,
        throughput_requests_per_second: serviceStats.throughput_rps || 0,
        gpu_utilization: metrics.utilization,
        gpu_memory_used: metrics.memory_used,
        gpu_temperature: metrics.temperature,
        total_tokens_generated: serviceStats.total_tokens || 0,
        total_requests_processed: serviceStats.total_requests || 0,
        cache_hit_ratio: serviceStats.cache_hit_ratio || 0,
        uptime_seconds: serviceStats.uptime_seconds || 0,
        error_rate: serviceStats.error_rate || 0,
        queue_length: this.requestQueue.length
      });

    } catch (error) {
      console.error('Failed to update NVIDIA Llama stats:', error);
    }
  }

  /**
   * Add request to processing queue
   */
  private async addToQueue(request: LlamaRequest): Promise<void> {
    return new Promise((resolve, reject) => {
      this.requestQueue.push({
        request,
        resolve: resolve as any,
        reject,
        timestamp: Date.now()
      });

      // Process queue if not already processing
      this.processQueue();
    });
  }

  /**
   * Process request queue with load balancing
   */
  private async processQueue(): Promise<void> {
    if (this.requestQueue.length === 0) return;

    const config = await this.getCurrentConfig();
    const batchSize = Math.min(config.batch_size, this.requestQueue.length);
    const batch = this.requestQueue.splice(0, batchSize);

    try {
      const responses = await this.batchGenerate(batch.map(item => item.request));
      
      batch.forEach((item, index) => {
        item.resolve(responses[index]);
      });

    } catch (error) {
      batch.forEach(item => {
        item.reject(error as Error);
      });
    }

    // Continue processing if queue has more items
    if (this.requestQueue.length > 0) {
      setTimeout(() => this.processQueue(), 100);
    }
  }

  /**
   * Update request statistics
   */
  private updateRequestStats(generationTime: number, tokensGenerated: number): void {
    nvidiaLlamaStatsStore.update(stats => ({
      ...stats,
      total_requests_processed: stats.total_requests_processed + 1,
      total_tokens_generated: stats.total_tokens_generated + tokensGenerated,
      avg_latency_ms: (stats.avg_latency_ms + generationTime) / 2,
      avg_tokens_per_second: (stats.avg_tokens_per_second + (tokensGenerated / (generationTime / 1000))) / 2
    }));
  }

  /**
   * Get current configuration
   */
  private async getCurrentConfig(): Promise<NvidiaLlamaConfig> {
    return new Promise(resolve => {
      nvidiaLlamaConfigStore.subscribe(value => resolve(value))();
    });
  }

  /**
   * Cleanup resources
   */
  destroy(): void {
    if (this.statsUpdateInterval) {
      clearInterval(this.statsUpdateInterval);
      this.statsUpdateInterval = null;
    }
  }
}

// Singleton instance
export const nvidiaLlamaService = new NvidiaLlamaService();